# ubports-apps

.github/workflows/: main.yml
whatsweb/: CMakeLists.txt  launcher.sh  manifest.json  push-apparmor.json  whatsweb-push.apparmor  whatsweb.apparmor  whatsweb.desktop
whatsweb/app/: Main.qml  Notifier.qml  ScreenSaverView.qml  Toast.qml  ubuntutheme.js
